On branch main  Changes to be committed: 	modified:   __pycache__/app.cpython-313.pyc 	modified:   app.py 	modified:   instance/tasks.db 	new file:   migrations/versions/__pycache__/c647fdb3920c_add_completion_status_and_time_of_.cpython-313.pyc 	new file:   migrations/versions/c647fdb3920c_add_completion_status_and_time_of_.py 	modified:   static/style.css 	modified:   templates/index.html

--- a/static/style.css
+++ b/static/style.css
@@ -79,3 +79,8 @@ td a[href*="delete"] {
 td a:hover {
     opacity: 0.8;
 }
+
+.completed {
+    text-decoration: line-through;
+    color: #888;
+}
